--- a/Data Extraction.ipynb
+++ b/Data Extraction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,17 +28,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "year_borough_grocery.csv\n"
+      "Apr_borough_grocery.csv\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "data_path=\"/Users/lucas/Desktop/EPFL/Master/ADA/project/P3/ada-2020-project-milestone-p3-p3_pleutre/data/all/\"\n",
+    "data_path=\"./data/all/\"\n",
     "files = os.listdir(data_path)\n",
     "#list all the csv files availables in the data directory\n",
     "files_csv = [i for i in files if i.endswith('.csv')]\n",
@@ -76,27 +76,133 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_id</th>\n",
+       "      <th>fat</th>\n",
+       "      <th>saturate</th>\n",
+       "      <th>sugar</th>\n",
+       "      <th>protein</th>\n",
+       "      <th>carb</th>\n",
+       "      <th>fibre</th>\n",
+       "      <th>energy_tot</th>\n",
+       "      <th>h_nutrients_calories</th>\n",
+       "      <th>month</th>\n",
+       "      <th>agg_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>8.458041</td>\n",
+       "      <td>3.357529</td>\n",
+       "      <td>9.187517</td>\n",
+       "      <td>5.190379</td>\n",
+       "      <td>15.656163</td>\n",
+       "      <td>1.609087</td>\n",
+       "      <td>165.206732</td>\n",
+       "      <td>1.623542</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>borough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E09000002</td>\n",
+       "      <td>9.268406</td>\n",
+       "      <td>3.607954</td>\n",
+       "      <td>10.683555</td>\n",
+       "      <td>5.150597</td>\n",
+       "      <td>20.499594</td>\n",
+       "      <td>1.580891</td>\n",
+       "      <td>190.223194</td>\n",
+       "      <td>1.533326</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>borough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E09000003</td>\n",
+       "      <td>8.482420</td>\n",
+       "      <td>3.361327</td>\n",
+       "      <td>9.287471</td>\n",
+       "      <td>5.065980</td>\n",
+       "      <td>16.725509</td>\n",
+       "      <td>1.625202</td>\n",
+       "      <td>168.236571</td>\n",
+       "      <td>1.585315</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>borough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>E09000004</td>\n",
+       "      <td>9.102892</td>\n",
+       "      <td>3.476263</td>\n",
+       "      <td>10.998802</td>\n",
+       "      <td>5.215320</td>\n",
+       "      <td>19.869426</td>\n",
+       "      <td>1.645999</td>\n",
+       "      <td>186.747871</td>\n",
+       "      <td>1.550169</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>borough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E09000005</td>\n",
+       "      <td>9.250013</td>\n",
+       "      <td>3.695182</td>\n",
+       "      <td>10.120945</td>\n",
+       "      <td>5.076840</td>\n",
+       "      <td>18.526026</td>\n",
+       "      <td>1.569537</td>\n",
+       "      <td>181.971932</td>\n",
+       "      <td>1.546401</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>borough</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "     area_id       fat  saturate      sugar   protein       carb     fibre  \\\n",
-       "0  E09000001  8.472985  3.361599   9.278065  5.253333  15.779639  1.619850   \n",
-       "1  E09000002  9.209959  3.596834  10.793244  5.193872  19.784988  1.590335   \n",
-       "2  E09000003  8.594464  3.407353   9.530548  5.129627  17.025950  1.638639   \n",
-       "3  E09000004  9.119180  3.466346  10.941085  5.304496  19.997105  1.657118   \n",
-       "4  E09000005  8.962466  3.559913  10.148610  5.132915  18.726476  1.585978   \n",
+       "0  E09000001  8.458041  3.357529   9.187517  5.190379  15.656163  1.609087   \n",
+       "1  E09000002  9.268406  3.607954  10.683555  5.150597  20.499594  1.580891   \n",
+       "2  E09000003  8.482420  3.361327   9.287471  5.065980  16.725509  1.625202   \n",
+       "3  E09000004  9.102892  3.476263  10.998802  5.215320  19.869426  1.645999   \n",
+       "4  E09000005  9.250013  3.695182  10.120945  5.076840  18.526026  1.569537   \n",
        "\n",
        "   energy_tot  h_nutrients_calories month agg_level  \n",
-       "0  165.851751              1.618208   yea   borough  \n",
-       "1  187.174390              1.545272   yea   borough  \n",
-       "2  170.655504              1.581507   yea   borough  \n",
-       "3  187.754791              1.551703   yea   borough  \n",
-       "4  180.510586              1.555736   yea   borough  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>area_id</th>\n      <th>fat</th>\n      <th>saturate</th>\n      <th>sugar</th>\n      <th>protein</th>\n      <th>carb</th>\n      <th>fibre</th>\n      <th>energy_tot</th>\n      <th>h_nutrients_calories</th>\n      <th>month</th>\n      <th>agg_level</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>E09000001</td>\n      <td>8.472985</td>\n      <td>3.361599</td>\n      <td>9.278065</td>\n      <td>5.253333</td>\n      <td>15.779639</td>\n      <td>1.619850</td>\n      <td>165.851751</td>\n      <td>1.618208</td>\n      <td>yea</td>\n      <td>borough</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>E09000002</td>\n      <td>9.209959</td>\n      <td>3.596834</td>\n      <td>10.793244</td>\n      <td>5.193872</td>\n      <td>19.784988</td>\n      <td>1.590335</td>\n      <td>187.174390</td>\n      <td>1.545272</td>\n      <td>yea</td>\n      <td>borough</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>E09000003</td>\n      <td>8.594464</td>\n      <td>3.407353</td>\n      <td>9.530548</td>\n      <td>5.129627</td>\n      <td>17.025950</td>\n      <td>1.638639</td>\n      <td>170.655504</td>\n      <td>1.581507</td>\n      <td>yea</td>\n      <td>borough</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>E09000004</td>\n      <td>9.119180</td>\n      <td>3.466346</td>\n      <td>10.941085</td>\n      <td>5.304496</td>\n      <td>19.997105</td>\n      <td>1.657118</td>\n      <td>187.754791</td>\n      <td>1.551703</td>\n      <td>yea</td>\n      <td>borough</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>E09000005</td>\n      <td>8.962466</td>\n      <td>3.559913</td>\n      <td>10.148610</td>\n      <td>5.132915</td>\n      <td>18.726476</td>\n      <td>1.585978</td>\n      <td>180.510586</td>\n      <td>1.555736</td>\n      <td>yea</td>\n      <td>borough</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "0  165.206732              1.623542   Apr   borough  \n",
+       "1  190.223194              1.533326   Apr   borough  \n",
+       "2  168.236571              1.585315   Apr   borough  \n",
+       "3  186.747871              1.550169   Apr   borough  \n",
+       "4  181.971932              1.546401   Apr   borough  "
+      ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -116,13 +222,6 @@
    "source": [
     "result.to_csv('data/tesco.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -141,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
