--- a/visu.ipynb
+++ b/visu.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "4  E01000006  POLYGON ((545122.049 184314.931, 545271.917 18..."
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,13 +87,13 @@
     "import geopandas as gpd\n",
     "import numpy as np\n",
     "data_path = 'data/statistical-gis-boundaries-london/ESRI2/'\n",
-    "gdf_lsoa = gpd.read_file(data_path + 'LSOA_2011_London_gen_MHW.shp' )[['LSOA11CD','geometry']]\\\n",
+    "gdf_lsoa = gpd.read_file(data_path + 'LSOA_2011_London_gen_MHW.shp' )[['LSOA11CD','NAME','geometry']]\\\n",
     "                .rename(columns={'LSOA11CD':'area_id'})\n",
-    "gdf_msoa = gpd.read_file(data_path + 'MSOA_2011_London_gen_MHW.shp' )[['MSOA11CD','geometry']]\\\n",
+    "gdf_msoa = gpd.read_file(data_path + 'MSOA_2011_London_gen_MHW.shp' )[['MSOA11CD','NAME','geometry']]\\\n",
     "                .rename(columns={'MSOA11CD':'area_id'})\n",
-    "gdf_ward = gpd.read_file(data_path + 'London_Ward_CityMerged.shp')[['GSS_CODE','geometry']]\\\n",
+    "gdf_ward = gpd.read_file(data_path + 'London_Ward_CityMerged.shp')[['GSS_CODE','NAME','geometry']]\\\n",
     "               .rename(columns={'GSS_CODE':'area_id'})\n",
-    "gdf_borough = gpd.read_file(data_path + 'London_Borough_Excluding_MHW.shp' )[['GSS_CODE','geometry']]\\\n",
+    "gdf_borough = gpd.read_file(data_path + 'London_Borough_Excluding_MHW.shp' )[['GSS_CODE','NAME','geometry']]\\\n",
     "               .rename(columns={'GSS_CODE':'area_id'})\n",
     "gdf = {'lsoa':gdf_lsoa,'msoa':gdf_msoa,'osward':gdf_ward,'borough':gdf_borough}\n",
     "gdf_lsoa.head()"
@@ -707,40 +707,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cluster evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area_id                                             E01000001\n",
+      "geometry    POLYGON ((532105.0919998939 182011.23, 532162....\n",
+      "Name: 0, dtype: object\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.bokehjs_exec.v0+json": "",
       "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
        "\n",
-       "<script id=\"3523\">\n",
-       "  var xhr = new XMLHttpRequest()\n",
-       "  xhr.responseType = 'blob';\n",
-       "  xhr.open('GET', \"http://localhost:55648/autoload.js?bokeh-autoload-element=3523&bokeh-absolute-url=http://localhost:55648&resources=none\", true);\n",
-       "  \n",
-       "  xhr.onload = function (event) {\n",
-       "    var script = document.createElement('script'),\n",
-       "    src = URL.createObjectURL(event.target.response);\n",
-       "    script.src = src;\n",
-       "    document.body.appendChild(script);\n",
-       "  };\n",
-       "xhr.send();\n",
-       "</script>"
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_id</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E01000001</td>\n",
+       "      <td>POLYGON ((532105.092 182011.230, 532162.491 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E01000002</td>\n",
+       "      <td>POLYGON ((532746.813 181786.891, 532671.688 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E01000003</td>\n",
+       "      <td>POLYGON ((532135.145 182198.119, 532158.250 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4674</th>\n",
+       "      <td>E01032739</td>\n",
+       "      <td>MULTIPOLYGON (((531667.624 180534.992, 531647....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4675</th>\n",
+       "      <td>E01032740</td>\n",
+       "      <td>POLYGON ((532022.374 181893.469, 532021.188 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4750</th>\n",
+       "      <td>E01033490</td>\n",
+       "      <td>POLYGON ((532089.264 182076.985, 532105.092 18...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        area_id                                           geometry\n",
+       "0     E01000001  POLYGON ((532105.092 182011.230, 532162.491 18...\n",
+       "1     E01000002  POLYGON ((532746.813 181786.891, 532671.688 18...\n",
+       "2     E01000003  POLYGON ((532135.145 182198.119, 532158.250 18...\n",
+       "4674  E01032739  MULTIPOLYGON (((531667.624 180534.992, 531647....\n",
+       "4675  E01032740  POLYGON ((532022.374 181893.469, 532021.188 18...\n",
+       "4750  E01033490  POLYGON ((532089.264 182076.985, 532105.092 18..."
       ]
      },
-     "metadata": {
-      "application/vnd.bokehjs_exec.v0+json": {
-       "server_id": "a4b99c8ebfb44f159e9fd4a255d5330b"
-      }
-     },
-     "output_type": "display_data"
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(hover.tooltips)"
+    "data_path = 'data/statistical-gis-boundaries-london/ESRI2/'\n",
+    "gdf_lsoa = gpd.read_file(data_path + 'LSOA_2011_London_gen_MHW.shp' )[['LSOA11CD','geometry']]\\\n",
+    "                .rename(columns={'LSOA11CD':'area_id'})\n",
+    "r = gdf_lsoa.iloc[0,:]\n",
+    "print(r)\n",
+    "gdf_lsoa[~gdf_lsoa.geometry.disjoint(r.geometry)]"
    ]
   },
   {
@@ -767,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
