add some comments

--- a/visu.ipynb
+++ b/visu.ipynb
@@ -357,7 +357,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert data into JSON format for Bokeh"
+    "## Convert data into JSON format for Bokeh\n",
+    "\n",
+    "The bokeh library we are going to use to make the interactive visualiastion requires the data to be encoded in a JSON format. Given a ```agg_level``` and a ```month``` the following function will performs this encoding."
    ]
   },
   {
@@ -367,7 +369,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "#Read data to json\n",
+    "#Convert data to json\n",
     "def json_data(agg_level,month,feature=None):\n",
     "    mo = merged_tot[agg_level][month]\n",
     "    merged_json = json.loads(mo.to_json())\n",
@@ -380,8 +382,83 @@
    "metadata": {},
    "source": [
     "# Visualisation creation\n",
-    "## Set up"
+    "## Color Bar helper functions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_feature(state):\n",
+    "    data = merged_tot[state['agg_level']][state['month']][state['feature']]\n",
+    "    data = data[data != 'No data']\n",
+    "    data = data.astype(np.double)\n",
+    "    return data\n",
+    "\n",
+    "def create_color_mapper(state,n_colors=8):\n",
+    "    #selected feature\n",
+    "    feature = get_feature(state)\n",
+    "    #Define a sequential multi-hue color palette.\n",
+    "    palette  = brewer['YlGnBu'][n_colors]\n",
+    "    #Reverse color order so that dark blue is for highest values.\n",
+    "    palette = palette[::-1]\n",
+    "    #Create color mapper with right range\n",
+    "    color_mapper = LinearColorMapper(\n",
+    "        palette = palette, nan_color = '#d9d9d9',\n",
+    "        low = feature.min(), high = feature.max())\n",
+    "    return color_mapper\n",
+    "\n",
+    "def create_color_bar(state,p,geosource):\n",
+    "    color_mapper = create_color_mapper(state)\n",
+    "    color_bar = ColorBar(\n",
+    "        color_mapper=color_mapper, label_standoff=8,width = 500, height = 20,\n",
+    "        border_line_color=None,location = (0,0), orientation = 'horizontal', \n",
+    "        #major_label_overrides = tick_labels\n",
+    "       )\n",
+    "    p.patches('xs','ys', \n",
+    "              source = geosource,fill_color = {'field' :state['feature'], 'transform' : color_mapper},\n",
+    "              line_color = 'black', line_width = 0.25, fill_alpha = 1)\n",
+    "    p.add_layout(color_bar, 'below')\n",
+    "    return color_bar"
+   ]
+  },
+  {
+   "source": [
+    "## Handling changes due to user events"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_plot(state_field, new_val):\n",
+    "        state[state_field] = new_val #state update\n",
+    "        p.title.text = \"{feature} consumption for {agg_level} during the prediod {month}\".format(**state)\n",
+    "        if state_field == 'feature':\n",
+    "            color_mapper = create_color_mapper(state)\n",
+    "            color_bar.color_mapper = color_mapper\n",
+    "            p.patches('xs','ys', \n",
+    "              source = geosource,\n",
+    "              fill_color = {'field' :state['feature'], 'transform' : color_mapper},\n",
+    "              line_color = 'black', line_width = 0.25, fill_alpha = 1)\n",
+    "        new_data = json_data(**state)\n",
+    "        geosource.geojson = new_data\n",
+    "        hover = HoverTool(tooltips = [ ('Area name','@name'),(state['feature'], '@'+state['feature'])])\n",
+    "        p.tools = [hover]"
+   ]
+  },
+  {
+   "source": [
+    "### Creation of the actual figure and components"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -709,7 +786,6 @@
    ],
    "source": [
     "import yaml\n",
-    "\n",
     "from bokeh.layouts import column\n",
     "from bokeh.models import ColumnDataSource, Slider,HoverTool\n",
     "from bokeh.plotting import figure\n",
@@ -721,77 +797,35 @@
     "from bokeh.plotting import figure\n",
     "from bokeh.models import GeoJSONDataSource, LinearColorMapper, ColorBar\n",
     "from bokeh.palettes import brewer\n",
+    "# output notebook to allow inline jupyter interaction\n",
     "output_notebook()\n",
     "\n",
-    "def get_feature(state):\n",
-    "    data = merged_tot[state['agg_level']][state['month']][state['feature']]\n",
-    "    data = data[data != 'No data']\n",
-    "    data = data.astype(np.double)\n",
-    "    return data\n",
-    "\n",
-    "def create_color_mapper(state,n_colors=8):\n",
-    "    #selected feature\n",
-    "    feature = get_feature(state)\n",
-    "    #Define a sequential multi-hue color palette.\n",
-    "    palette  = brewer['YlGnBu'][n_colors]\n",
-    "    #Reverse color order so that dark blue is highest obesity.\n",
-    "    palette = palette[::-1]\n",
-    "    feature = get_feature(state)\n",
-    "    color_mapper = LinearColorMapper(\n",
-    "        palette = palette, nan_color = '#d9d9d9',\n",
-    "        low = feature.min(), high = feature.max())\n",
-    "    return color_mapper\n",
-    "\n",
-    "def create_color_bar(state,p,geosource):\n",
-    "    color_mapper = create_color_mapper(state)\n",
-    "    color_bar = ColorBar(\n",
-    "        color_mapper=color_mapper, label_standoff=8,width = 500, height = 20,\n",
-    "        border_line_color=None,location = (0,0), orientation = 'horizontal', \n",
-    "        #major_label_overrides = tick_labels\n",
-    "       )\n",
-    "    p.patches('xs','ys', \n",
-    "              source = geosource,fill_color = {'field' :state['feature'], 'transform' : color_mapper},\n",
-    "              line_color = 'black', line_width = 0.25, fill_alpha = 1)\n",
-    "    p.add_layout(color_bar, 'below')\n",
-    "    return color_bar\n",
-    "\n",
     "def bkapp(doc):\n",
-    "    \n",
+    "    # default state when the component is loaded for the first time\n",
     "    state = {'month':'yea','agg_level':'borough','feature':'fat'}\n",
     "    geosource = GeoJSONDataSource(geojson = json_data(**state))\n",
+    "    # Hover that will show the current feature value for the hovered area + its name\n",
     "    hover = HoverTool(tooltips = [ ('Area name','@name'),(state['feature'], '@'+state['feature'])])\n",
+    "    # Create figure for the plot\n",
     "    p = figure(title = 'Fibre consumption during period', \n",
     "            plot_height = 800 , plot_width = 950, toolbar_location = None,\n",
     "            tools = [hover])\n",
+    "    # Remover axis for nicer layout\n",
     "    p.xgrid.grid_line_color = None\n",
     "    p.ygrid.grid_line_color = None\n",
     "    p.axis.visible = False\n",
-    "    color_bar = create_color_bar(state,p,geosource)\n",
-    "    \n",
-    "    def update_plot(state_field, new_val):\n",
-    "        state[state_field] = new_val #state update\n",
-    "        p.title.text = \"{feature} consumption for {agg_level} during the prediod {month}\".format(**state)\n",
-    "        if state_field == 'feature':\n",
-    "            color_mapper = create_color_mapper(state)\n",
-    "            color_bar.color_mapper = color_mapper\n",
-    "            #color_bar.color_mapper.low  = feature.min()\n",
-    "            #color_bar.color_mapper.high = feature.max()\n",
-    "            p.patches('xs','ys', \n",
-    "              source = geosource,fill_color = {'field' :state['feature'], 'transform' : color_mapper},\n",
-    "              line_color = 'black', line_width = 0.25, fill_alpha = 1)\n",
-    "        new_data = json_data(**state)\n",
-    "        geosource.geojson = new_data\n",
-    "        hover = HoverTool(tooltips = [ ('Area name','@name'),(state['feature'], '@'+state['feature'])])\n",
-    "        p.tools = [hover]\n",
-    "    \n",
-    "    #slider         = Slider(start=0, end=len(periods)-1, value=0, step=1, title=\"Period\") # Make a slider object: slider\n",
-    "    btn_period     = RadioButtonGroup(labels=periods, active=0)                            # selection aggregation level\n",
-    "    btn_agg_level  = RadioButtonGroup(labels=agg_levels, active=0)                         # selection aggregation level\n",
-    "    select_feature = Select(title=\"Typical product feature:\", value=feature_names[0], options=feature_names)\n",
-    "    #slider.on_change('value', lambda attr,old,new: update_plot('month',periods[new]))\n",
+    "    # Add the color bar\n",
+    "    color_bar = create_color_bar(state,p,geosource)    \n",
+    "    #create graphical components for the user to interact\n",
+    "    btn_period     = RadioButtonGroup(labels=periods, active=0)       # selection aggregation level\n",
+    "    btn_agg_level  = RadioButtonGroup(labels=agg_levels, active=0)    # selection aggregation level\n",
+    "    select_feature = Select(title=\"Typical product feature:\", \n",
+    "                            value=feature_names[0], options=feature_names)\n",
+    "    #add event handler\n",
     "    btn_period.on_click(lambda new: update_plot('month',periods[new]))\n",
     "    btn_agg_level.on_click(lambda new: update_plot('agg_level',agg_levels[new]))\n",
     "    select_feature.on_change('value', lambda attr,old,new: update_plot('feature',new))\n",
+    "    #add components to root document\n",
     "    doc.add_root(column(btn_period,btn_agg_level, p,select_feature))"
    ]
   },
