more and more comments

--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -1,6 +1,8 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Product Clustering : a geographical analysis\n",
     "In this notebook answer the following questions:\n",
@@ -11,9 +13,7 @@
     "4. In the context of an advertising campaign, which areas of the city should be associated with which kind of products?\n",
     "\n",
     "We will start by studing the ouput clustering of a K-means algorithm to undertand which values of $k$ will produce the most natural clustering __*in the typical product space*__. We will then try to make some sense of out this clustering by performing a vizualization in 2D using several dimentionality reduction techniques. We might hope that we will already be able to see some geographical structure in those plots (recognize somehow the map of London). If not we will have to apply other techniques to help access the geographical validation of the clusters, if any."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -38,12 +38,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Data Loading \n",
     "To be as precise as possible we study the smallest aggregation level for the entire year period."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -51,8 +51,107 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fat</th>\n",
+       "      <th>saturate</th>\n",
+       "      <th>sugar</th>\n",
+       "      <th>protein</th>\n",
+       "      <th>carb</th>\n",
+       "      <th>fibre</th>\n",
+       "      <th>energy_tot</th>\n",
+       "      <th>h_nutrients_calories</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>area_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>E01000001</th>\n",
+       "      <td>8.535149</td>\n",
+       "      <td>3.498749</td>\n",
+       "      <td>9.213734</td>\n",
+       "      <td>5.262429</td>\n",
+       "      <td>15.158014</td>\n",
+       "      <td>1.622653</td>\n",
+       "      <td>163.985327</td>\n",
+       "      <td>1.620439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E01000002</th>\n",
+       "      <td>8.054729</td>\n",
+       "      <td>3.159077</td>\n",
+       "      <td>8.337412</td>\n",
+       "      <td>5.351774</td>\n",
+       "      <td>14.358466</td>\n",
+       "      <td>1.692822</td>\n",
+       "      <td>157.572172</td>\n",
+       "      <td>1.661276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E01000003</th>\n",
+       "      <td>8.153757</td>\n",
+       "      <td>3.375788</td>\n",
+       "      <td>9.414937</td>\n",
+       "      <td>5.029519</td>\n",
+       "      <td>15.820254</td>\n",
+       "      <td>1.522523</td>\n",
+       "      <td>163.321285</td>\n",
+       "      <td>1.646243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E01000005</th>\n",
+       "      <td>8.339058</td>\n",
+       "      <td>3.319496</td>\n",
+       "      <td>9.603258</td>\n",
+       "      <td>5.230254</td>\n",
+       "      <td>17.126487</td>\n",
+       "      <td>1.612862</td>\n",
+       "      <td>169.339310</td>\n",
+       "      <td>1.595496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E01000006</th>\n",
+       "      <td>9.622101</td>\n",
+       "      <td>3.864007</td>\n",
+       "      <td>11.355115</td>\n",
+       "      <td>5.026295</td>\n",
+       "      <td>19.903063</td>\n",
+       "      <td>1.640227</td>\n",
+       "      <td>190.310015</td>\n",
+       "      <td>1.519193</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                fat  saturate      sugar   protein       carb     fibre  \\\n",
        "area_id                                                                   \n",
@@ -69,11 +168,11 @@
        "E01000003  163.321285              1.646243  \n",
        "E01000005  169.339310              1.595496  \n",
        "E01000006  190.310015              1.519193  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fat</th>\n      <th>saturate</th>\n      <th>sugar</th>\n      <th>protein</th>\n      <th>carb</th>\n      <th>fibre</th>\n      <th>energy_tot</th>\n      <th>h_nutrients_calories</th>\n    </tr>\n    <tr>\n      <th>area_id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>E01000001</th>\n      <td>8.535149</td>\n      <td>3.498749</td>\n      <td>9.213734</td>\n      <td>5.262429</td>\n      <td>15.158014</td>\n      <td>1.622653</td>\n      <td>163.985327</td>\n      <td>1.620439</td>\n    </tr>\n    <tr>\n      <th>E01000002</th>\n      <td>8.054729</td>\n      <td>3.159077</td>\n      <td>8.337412</td>\n      <td>5.351774</td>\n      <td>14.358466</td>\n      <td>1.692822</td>\n      <td>157.572172</td>\n      <td>1.661276</td>\n    </tr>\n    <tr>\n      <th>E01000003</th>\n      <td>8.153757</td>\n      <td>3.375788</td>\n      <td>9.414937</td>\n      <td>5.029519</td>\n      <td>15.820254</td>\n      <td>1.522523</td>\n      <td>163.321285</td>\n      <td>1.646243</td>\n    </tr>\n    <tr>\n      <th>E01000005</th>\n      <td>8.339058</td>\n      <td>3.319496</td>\n      <td>9.603258</td>\n      <td>5.230254</td>\n      <td>17.126487</td>\n      <td>1.612862</td>\n      <td>169.339310</td>\n      <td>1.595496</td>\n    </tr>\n    <tr>\n      <th>E01000006</th>\n      <td>9.622101</td>\n      <td>3.864007</td>\n      <td>11.355115</td>\n      <td>5.026295</td>\n      <td>19.903063</td>\n      <td>1.640227</td>\n      <td>190.310015</td>\n      <td>1.519193</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -222,11 +321,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Unfortuna"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1230,7 +1329,7 @@
     }
    ],
    "source": [
-    "gdf_lsoa_neighbors = add_neighbors_list(gdf_lsoa.merge(df_lsoa['area_id'], how='inner', on='area_id'))"
+    "gdf_lsoa_neighbors = add_neighbors_list(gdf_lsoa.merge(4['area_id'], how='inner', on='area_id'))"
    ]
   },
   {
@@ -1797,7 +1896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
