--- a/Extension.ipynb
+++ b/Extension.ipynb
@@ -37,9 +37,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: bokeh in /Users/lucas/anaconda3/lib/python3.7/site-packages (2.0.0)\n",
+      "Requirement already satisfied: PyYAML>=3.10 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (5.3.1)\n",
+      "Requirement already satisfied: packaging>=16.8 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (20.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (2.8.1)\n",
+      "Requirement already satisfied: Jinja2>=2.7 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (2.11.2)\n",
+      "Requirement already satisfied: tornado>=5 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (6.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (3.7.4.3)\n",
+      "Requirement already satisfied: numpy>=1.11.3 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (1.19.4)\n",
+      "Requirement already satisfied: pillow>=4.0 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from bokeh) (8.0.1)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from packaging>=16.8->bokeh) (2.4.7)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from python-dateutil>=2.1->bokeh) (1.15.0)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from Jinja2>=2.7->bokeh) (1.1.1)\n",
+      "Requirement already satisfied: geopandas in /Users/lucas/anaconda3/lib/python3.7/site-packages (0.8.1)\n",
+      "Requirement already satisfied: shapely in /Users/lucas/anaconda3/lib/python3.7/site-packages (from geopandas) (1.7.1)\n",
+      "Requirement already satisfied: fiona in /Users/lucas/anaconda3/lib/python3.7/site-packages (from geopandas) (1.8.18)\n",
+      "Requirement already satisfied: pyproj>=2.2.0 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from geopandas) (3.0.0.post1)\n",
+      "Requirement already satisfied: pandas>=0.23.0 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from geopandas) (1.1.5)\n",
+      "Requirement already satisfied: six>=1.7 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (1.15.0)\n",
+      "Requirement already satisfied: click-plugins>=1.0 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (1.1.1)\n",
+      "Requirement already satisfied: certifi in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (2020.12.5)\n",
+      "Requirement already satisfied: attrs>=17 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (20.3.0)\n",
+      "Requirement already satisfied: munch in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (2.5.0)\n",
+      "Requirement already satisfied: cligj>=0.5 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (0.7.1)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from fiona->geopandas) (7.1.2)\n",
+      "Requirement already satisfied: numpy>=1.15.4 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from pandas>=0.23.0->geopandas) (1.19.4)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from pandas>=0.23.0->geopandas) (2020.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /Users/lucas/anaconda3/lib/python3.7/site-packages (from pandas>=0.23.0->geopandas) (2.8.1)\n"
+     ]
+    }
+   ],
    "source": [
     "# you can run this cell to downloaded the required dependencies\n",
     "!pip install bokeh\n",
